--- a/games/Street-Fighter/Six/characters/Elena/エレナの立ち回り.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの立ち回り.md
@@ -85,10 +85,15 @@ MP/6MK/2MKがだいたい同じくらいの距離。
 - 6HP: 発生17F、かなり遠めでも届きやすい
 
 差し返しは弱い。
+
 特に中足に差し返す技がなくて、相手の中足が届く距離は下がらないといけない。
+
+エレナの確反や差し返しはまず2MPが基本。MKは短すぎて届かない。余裕があればHPで、なれけば2LPやLKやMKを使う。
 
 基本的には2MPが使いやすい。
 ただ、低い姿勢に当たりにくいのがネック。MPも同様。
+
+エレナの差し返しはMPもありだけど、姿勢が低いと2MPより当たりづらいのが欠点。
 
 昇竜やSAの確反はHPにする。
 差し合いでもHPで返せるなら一番いいけど、意外と短い。
