--- a/games/Street-Fighter/Six/theory/守りの基本.md
+++ b/games/Street-Fighter/Six/theory/守りの基本.md
@@ -43,6 +43,11 @@
 
 ラグいとガードして割り込むのが難しくなるので、無敵技とジャンプでできるだけ凌いだ方がいいかも。グラップも無理。
 
+## ダメージを抑える
+
+守りの目的は相手の攻めを切ること。
+その過程でダメージを受けない方がコストを抑えられるけど、それ自体は本質ではない。
+
 ## 基本の3種
 
 1. ガードして割り込み
