--- a/games/Street-Fighter/Six/theory/攻めの基本.md
+++ b/games/Street-Fighter/Six/theory/攻めの基本.md
@@ -195,3 +195,5 @@ https://x.com/acqua_db/status/1902286060316717314
 最速ジャンプと最速無敵技の二択を潰すには、後退から後ろジャンプの着地に長い技を当てる手もある。難しいけど。バクステにされると尚更難しい。
 
 ファジーコパンには普通に投げが入る。
+
+攻める側は相手が何もしてこないなら不利フレームを背負っていてもとにかく攻めていい。攻めを切らす方がダメ。まぁ、キャラによっては無理に攻めるよりも差し合いに戻った方がいい場合もあるけど。
