--- a/shared/music/theory/melody/音感.md
+++ b/shared/music/theory/melody/音感.md
@@ -7,3 +7,5 @@
 いちいちキーを変えて聞かないと演奏できないのでは手間がかかる。
 
 音感は音階で捉える人と周波数で捉える人がいて、キーを変えると違和感があるなら音階よりも周波数で捉えている。
+
+歌っていて音程がずれたのに気づけるなら音感はある。音に合わせた発声ができてないだけ。
