--- a/shared/communication/media/language/languages/japanese/日本語.md
+++ b/shared/communication/media/language/languages/japanese/日本語.md
@@ -3,3 +3,5 @@
 漢字だけでなく語彙もたくさん欲しいし、子供の頃から問いをたくさん持っているといい。
 
 日本語もチャンクから入った方がいいかも。「ねぇ」「聞いてよ」「元気？」とか。
+
+日本語には声に出す時だけややこしい読み方を変える文化がある。たとえば私立と市立の同音異義語を区別するために前者を「わたくしりつ」と読むことがある。
