--- a/shared/voice/training/声を出すための呼吸.md
+++ b/shared/voice/training/声を出すための呼吸.md
@@ -59,3 +59,7 @@
 呼気圧をかけたまま小さな声ってどうしたらいい？
 
 息と声の割合が100:0か0:100しかないと、いきなり大きな声から出すことしか出せない。同じ息の量でで小さな声から大きな声まで滑らかに変えられるようにする必要がある。呼気圧をかけたまま小さな声を出して、滑らかに声帯を閉じていけるように練習する。まずは3段階、5段階、と段階を細かく分けられるようにする。
+
+正しい息の使い方、声の出し方ができると音のレスポンスもよくなるのでリズムが良くなる。
+
+「うんうん」と自然な相槌を打つ時の感覚が腹から声を出す時の呼吸に近い。
