--- a/games/Street-Fighter/Six/characters/Elena/エレナの特徴.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの特徴.md
@@ -119,3 +119,5 @@
 SA1に無敵がないのでBOするのはまずい。あとSAゲージもSA1で回すというよりは、SA2やSA3で使っていく。
 
 リンクシンクだけでなく、リンクソワールも入力方向によって距離が変わる。全体の発生は変わらないので、弱から前入れで伸びる。
+
+エレナは距離によって技を使い分けたり相手の状態を確認してコンボを変えたりしないといけないので難しい。画面を本当によく見ておかないといけない。
