--- a/games/Street-Fighter/Six/theory/守りの基本.md
+++ b/games/Street-Fighter/Six/theory/守りの基本.md
@@ -151,3 +151,5 @@ SA3があるなら、BOしても相手も簡単には攻められない。
 ガードして不利になる技は覚えないといけない。発生が遅い場合は止めたいし、止められなかった場合暴れてはいけない。
 
 中央で投げられたくないキャラはまとめて、それ以外は投げを受け入れた方がいい。抜けるとしても投げ抜けよりジャンプ。
+
+スト６はわからなくなったらとりあえずパリィを長押しするのが大事。見えない裏表とか中下とか。
