--- a/shared/communication/channels/sex/女性.md
+++ b/shared/communication/channels/sex/女性.md
@@ -1,3 +1,6 @@
 女性って年寄りと似てるかも。
 
 女性は好意を悪意として受け取るのでめんどくさい。
+
+女と喧嘩になったら「でも俺が悲しくなったのは事実なんだから」で勝てる。
+https://x.com/karasu_pua/status/1937868155831152821?s=12
