--- a/shared/perception/認識.md
+++ b/shared/perception/認識.md
@@ -34,3 +34,8 @@
 同じものを同じように、違うものを違うように、区別する。
 
 認識は組織的な認知。構造を作る。モデリングする。
+
+唯識論は浅い。
+認識できなくても「ない」とは言えない。
+その場では認識できなくても、後々に影響を受けることがある。ウイルスや細菌で病気になるとか。
+影響というものは心ではなく体で受けるものだ。
