--- a/shared/voice/training/tips/声を出す.md
+++ b/shared/voice/training/tips/声を出す.md
@@ -256,3 +256,5 @@ https://youtu.be/OEjipkH95_0?si=9RxpD90fqQnpNSXy
 特に、横隔膜を下げる力は抜かずに、腹筋だけ力を抜くと勝手に息が入ってくるようにする。
 
 軽い相槌のように「うんうん」の感覚で声を出す。最初は息が持たないかも。
+
+声帯で声を出して強すぎるとしても、練習段階では別にいい。最終的にはもっと深いところで鳴らして柔らかく深い声にするのと、響きを良くしていく。抜いて声を出すのはもっと後。
