--- a/games/Street-Fighter/Six/characters/Elena/エレナのコンボ.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナのコンボ.md
@@ -62,6 +62,7 @@ Sレオパードの後とか、2LPが1回しか入らない場合はこれしか
 
 - 2LP(+4), 2MP, 弱グライド-6P: 1700
 - 2LP(+4), 2MP, 中スピン: 1480
+- {立} 2LP(+4), 2MP, 強ホーン: 1750
 - 2LP(+4), 2MP, ODグライド-6P: 2000
 - 2LP(+4), 2MP, ODスピン, 中ホーン: 2080
 - {端} 2LP(+4), 2MP, ODスピン, 弱ホーン, 強昇竜: 2450
@@ -72,6 +73,7 @@ Sレオパードの後とか、2LPが1回しか入らない場合はこれしか
 - 2LP(+4), 2MP, ODスピン, DR 2MP, 強ホーン, SA3: 4174
 
 MKや2HPは近くないと届かないので2MPの方が確実。
+2LPが届くなら2MPは届く。
 
 ## 2LK
 
