--- a/games/Street-Fighter/Six/characters/Elena/エレナの立ち回り.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの立ち回り.md
@@ -42,6 +42,8 @@ LKを空振りして6HPを止めにくるのを誘ってから6HPで差し返す
 
 遅い弾を盾に攻められるのが本当にきつい。舞、ジュリ、あと数はいないけど春麗やガイルも多分きつい。
 
+相手の中足の外で止まるくらいのリンクシンクを置いたり、マレットで下段を避けながら触ったりするのも相手からするとノイズになる。
+
 ## 差し合いの距離
 
 6HPがギリギリ当たる間合いでいい。
