--- a/games/Street-Fighter/Six/characters/Elena/エレナの練習メニュー.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの練習メニュー.md
@@ -1,3 +1,38 @@
+<!--
+
+整理中メモ
+
+コンボ:
+
+- 6HP-HP-HP
+- DR 2LK/6MK, MK-HK, 強ホーン
+- J.HK, 2MP, ODグライド
+- DR MK, 2MP, ODグライド
+- HP(pc)-HP, DR 2MP
+- DI(pc)
+- DI(壁)
+- 2LP/2LK, 2LP, 弱スピン
+- 2LP/2LK, 2LP, 弱スピン-リンク
+- 2LP/2LK, 2LP, CR 2LP, 2HP, 強スピン
+- 2MP, CR MK, 2HP, 強スピン
+- 2MP(pc), 強スピン
+- J.MK, MK-HK, 強ホーン
+- DR MK, MK-HK, 強ホーン
+- 6MK-MK
+- 2MK-HK, 強ホーン
+
+セットプレイ:
+
+- Sレオパード
+- Sマレット
+- {端} 2MK, 投げ/後退: +34
+- {端} 弱リンク, MK(+3)(g), 投げ/後退: +36
+- {端} LK, 投げ/後退: +22/+23
+- {端} HP, 投げ/後退: +39
+- {端} 前投げ, DR 前投げ
+
+ -->
+
 ## 共通設定
 
 （ダミー設定 > ガード: ランダム）
@@ -9,18 +44,38 @@
 - 6HP-HP-HP
   - 弱リンク, 後退
   - 弱リンク-Sレオパード, ...
+- {端} 6HP-HP-HP, HP, 前投げ/後退
 
 ## ラッシュ中下段
 
 （反撃設定 > ダウンリバーサル: 4F技）
 
 - DR 6MP/2LK, MK-HK, 強ホーン
-  - DR 6MP/2LK/投げ, ...
+  - DR 6MP/2LK/前投げ, ...
+  - {端} 弱リンク, MK(+3), MK-HK, 強ホーン, ...
 - DR 6MP/2LK(g), MK, 弱グライド-6P
-  - DR 6MP/2LK/投げ, ...
+  - DR 6MP/2LK/前投げ, ...
+  - {端} HP, 前投げ/後退
 - DR 6MP/2LK(g), MK, 弱グライド(g), ガード
+- {端} DR 6MP/2LK, MK-HK, 弱ホーン, 強昇竜, ...
 
 DR 6MPは相打ちでもコンボになる。
+
+## ジャンプ攻撃からのコンボ
+
+（反撃設定 > ダウンリバーサル: 無敵技）
+（反撃設定 > ダウンリバーサル: 何もしない）
+
+- J.HK, 2MP, ODグライド-6P, J.HK, ...
+  - {無敵技}, HP(pc), ...
+- J.HK(g), 2MP, 弱グライド, ガード
+
+ODグライド-6Pの後は中央でも詐欺飛びを狙える。
+
+## ラッシュ攻撃からのコンボ
+
+- DR MK, 2MP, ODグライド-6P, J.HK, ...
+- DR MK(g), 2MP, 弱グライド,
 
 ## 昇竜やSAの確反
 
@@ -42,17 +97,6 @@ DR 6MPは相打ちでもコンボになる。
 - 2LP/2LK(g), 2LP, ガード
 
 ラッシュが間合いギリギリで難しい。
-
-## ジャンプ攻撃からのコンボ
-
-（反撃設定 > ダウンリバーサル: 無敵技）
-（反撃設定 > ダウンリバーサル: 何もしない）
-
-- J.HK, 2MP, ODグライド-6P, J.HK, ...
-  - {無敵技}, HP(pc), ...
-- J.HK(g), 2MP, 弱グライド, ガード
-
-ODグライド-6Pの後は中央でも詐欺飛びを狙える。
 
 ## 端のインパクトと弱昇竜からの攻め
 
@@ -122,7 +166,7 @@ MK持続当ての起き攻めでも使える。
 - 2LP, 2LP, CR 2LP, 2HP, 強スピン, DR 2MP, 強ホーン, SA3
 - {端} 2LP, 2LP, CR 2LP, 2HP, 強スピン, 弱ホーン, 中昇竜
 
-## 端の弱昇竜からの攻め
+## {端} +36 の攻め
 
 - {端} DR MK, MK-HK, 弱ホーン, 弱昇竜, 弱リンク
   - MK(+3), MK-HK, 弱ホーン, 弱昇竜, ...
@@ -132,12 +176,20 @@ MK持続当ての起き攻めでも使える。
     - 後退
   - 後退: 最速投げ以外にシミー
 
-## 端の強昇竜からの攻め
+## {端} +22/+23の攻め
 
-- {端} DR MK, MK-HK, 弱ホーン, 強昇竜, LK
-  - MK, 弱グライド
+（ダウンリバーサル: 通常投げ 3Fディレイ）
+（ダウンリバーサル: 何もしない）
+
+- {端} 強昇竜, LK
+  - MK, 2LP, 弱スピン, 2MK
+    - MK, LK, ...
+    - 前投げ
+    - 後退
+  - MK(g), 2LP, ガード
   - 前投げ
   - 後退: シミー
+    - {通常投げ}, HP(pc), ...
 
  <!-- ---- この辺りから優先度検討中 ---- -->
 
@@ -189,23 +241,6 @@ MK持続当ての起き攻めでも使える。
 ## 4Fの確反
 
 - 2LP(pc), 2MP, 弱グライド-6P
-
-## 端の詐欺飛び
-
-端ではノーゲージでも詐欺飛びできる。
-
-（ダミー設定 > ガード: ランダム）
-（反撃設定 > ダウンリバーサル: 無敵技）
-（反撃設定 > ダウンリバーサル: 何もしない）
-
-- {端} J.HK, MK-HK, 弱グライド-6P, J.HK, ...
-  - {無敵技}, HP(pc), ...
-- {端} J.HK(g), MK-HK, 弱グライド-6P, J.HK, ...
-  - {無敵技}, HP(pc), ...
-- {端} J.HK(g), MK-HK(g), 弱グライド, ガード
-
-弱グライド単発ヒット確認もできるので、できるなら頑張る。
-MK-HK(g), 弱グライドは4F技で割り込まれるので、J.HKをガードされた時はできればMK, 弱グライドにすると割り込まれない。
 
 ## SA1でダメージを伸ばすコンボ
 
