--- a/games/Street-Fighter/Six/characters/Elena/エレナの特徴.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの特徴.md
@@ -44,10 +44,11 @@
 - ハーベスト
 - DR MK, 2MP
 - DR 6MK, MK
-- DR 2MK, 2MP
-- レオパード
+- DR 2MK, 2MP = 弱リンク-レオパード
+- J.MK
 - J.HK
-- マレット
+- 弱リンク-マレット
+- 強リンク-レオパード
 - Sハーベスト
 - Sレオパード
 - Sマレット
