--- a/games/Street-Fighter/Six/characters/Elena/エレナの攻めの選択肢.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの攻めの選択肢.md
@@ -29,6 +29,7 @@ Sレオパード(g)は密着じゃないので1回しか刻めない。
 
 - MK, 2LP, ...: ヒット確認は簡単だけど安い、無敵技以外で割り込めない
 - MK, 弱グライド: 入れ込み、ガードされても-3で無敵技以外で割り込めない
+- MK(g): 投げ間合いで+1、ヒットすると投げが届かない
 
 ヒット確認して2LPやLKに繋いだり、MK-HKのTCも何とか間に合う。
 ガードされても+1から2LP, 2LPまで入る。
