--- a/games/Street-Fighter/Six/characters/Elena/エレナの練習メニュー.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの練習メニュー.md
@@ -43,23 +43,19 @@
 - 6HP(g), ガード
 - 6HP-HP-HP
   - 弱リンク, 後退
-  - 弱リンク-Sレオパード, ...
+  - 弱リンク-3Sレオパード, ...
 - {端} 6HP-HP-HP, HP, 前投げ/後退
 
-## ラッシュ中下段
+6HPのTC派生は猶予が長いので、まずはどこまで遅らせてもコンボになるか試すところから始めるといい。
 
-（反撃設定 > ダウンリバーサル: 4F技）
+Sレオパードは斜め前入れじゃないと追撃が届かないので注意。
 
-- DR 6MP/2LK, MK-HK, 強ホーン
-  - DR 6MP/2LK/前投げ, ...
-  - {端} 弱リンク, MK(+3), MK-HK, 強ホーン, ...
-- DR 6MP/2LK(g), MK, 弱グライド-6P
-  - DR 6MP/2LK/前投げ, ...
+## ラッシュ攻撃からのコンボ
+
+- DR MK, 2MP, 弱グライド-6P
+  - DR MK, ...: 目押し
   - {端} HP, 前投げ/後退
-- DR 6MP/2LK(g), MK, 弱グライド(g), ガード
-- {端} DR 6MP/2LK, MK-HK, 弱ホーン, 強昇竜, ...
-
-DR 6MPは相打ちでもコンボになる。
+- DR MK, 2MP, 弱グライド(g), ガード
 
 ## ジャンプ攻撃からのコンボ
 
@@ -68,14 +64,25 @@ DR 6MPは相打ちでもコンボになる。
 
 - J.HK, 2MP, ODグライド-6P, J.HK, ...
   - {無敵技}, HP(pc), ...
-- J.HK(g), 2MP, 弱グライド, ガード
+- J.HK(g), 2MP, 弱グライド-6P:
+  - DR 2LK/6MP/投げ, ...: 目押し
+- J.HK(g), 2MP, 弱グライド(g), ガード
 
 ODグライド-6Pの後は中央でも詐欺飛びを狙える。
 
-## ラッシュ攻撃からのコンボ
+## ラッシュ中下段
 
-- DR MK, 2MP, ODグライド-6P, J.HK, ...
-- DR MK(g), 2MP, 弱グライド,
+（反撃設定 > ダウンリバーサル: 4F技）
+
+- DR 6MP/2LK, MK-HK, 強ホーン
+  - DR 6MP/2LK/前投げ, ...
+- DR 6MP/2LK(g), MK, 弱グライド-6P
+  - DR 6MP/2LK/前投げ, ...
+  - {端} HP, 前投げ/後退
+- DR 6MP/2LK(g), MK, 弱グライド(g), ガード
+- {端} DR 6MP/2LK, MK-HK, 弱ホーン, 強昇竜, ...
+
+DR 6MPは相打ちでもコンボになる。
 
 ## 昇竜やSAの確反
 
@@ -96,7 +103,7 @@ ODグライド-6Pの後は中央でも詐欺飛びを狙える。
   - DR 6MP/2LK/投げ, ...
 - 2LP/2LK(g), 2LP, ガード
 
-ラッシュが間合いギリギリで難しい。
+起き攻めが間合いギリギリで難しい。
 
 ## 端のインパクトと弱昇竜からの攻め
 
@@ -331,3 +338,9 @@ MK持続当ての起き攻めでも使える。
 - J.MK, MK-HK, 強ホーン, 弱リンク, 後退
 - J.MK(g), MK, 2LP, 弱スピン, ...
 - J.MK(g), MK(g), ガード
+
+## ラッシュ攻撃からのコンボ
+
+- DR MK, 2MP, ODグライド-6P, J.HK, ...
+- DR MK(g), 2MP, 弱グライド, ガード
+- DR MK(g); 前投げ: 1F遅らせる
