--- a/games/Street-Fighter/Six/characters/Elena/エレナの練習メニュー.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの練習メニュー.md
@@ -20,6 +20,8 @@
 - DR MK, MK-HK, 強ホーン
 - 6MK-MK
 - 2MK-HK, 強ホーン
+- MP-MP
+- HP-HP
 
 セットプレイ:
 
@@ -31,20 +33,23 @@
 - {端} HP, 投げ/後退: +39
 - {端} 前投げ, DR 前投げ
 
- -->
+-->
 
 ## 共通設定
 
 （ダミー設定 > ガード: ランダム）
 （ダミー設定 > 起き上がり: 後方受け身）
 
-## 差し合いのヒット確認
+## 6HPのヒット確認
 
 - 6HP(g), ガード
 - 6HP-HP-HP
   - 弱リンク, 後退
   - 弱リンク-3Sレオパード, ...
-- {端} 6HP-HP-HP, HP, 前投げ/後退
+- {端} 6HP-HP-HP
+  - HP, 前投げ/後退
+
+差し合いに使う。
 
 6HPのTC派生は猶予が長いので、まずはどこまで遅らせてもコンボになるか試すところから始めるといい。
 
@@ -104,6 +109,7 @@ DR 6MPは相打ちでもコンボになる。
 - 2LP/2LK(g), 2LP, ガード
 
 起き攻めが間合いギリギリで難しい。
+実践的にはDR 2LKが無難。
 
 ## 端のインパクトと弱昇竜からの攻め
 
@@ -112,35 +118,36 @@ DR 6MPは相打ちでもコンボになる。
 （反撃設定 > ガードリバーサル: 通常投げ 3Fディレイ）
 （反撃設定 > ガードリバーサル: 何もしない）
 
-- DI(壁), 2MP, 中スピン-Sハーベスト, 弱ホーン, 弱昇竜, 弱リンク
-  - MK(+3), MK-HK, 弱ホーン, 強昇竜, LK
-    - 前投げ, DI, ...
+- DI(壁), 2MP, 中スピン-Sハーベスト, 弱ホーン, 弱昇竜
+  - 弱リンク
+    - MK(+3), MK-HK, 弱ホーン, 強昇竜, LK
+      - 前投げ, DI, ...
+      - 後退, {通常投げ}, 2MP: シミー
+    - MK(+3)(g), 前投げ, DI, ...
+    - MK(+3)(g), 後退, {通常投げ}, 2MP: シミー
     - 後退, {通常投げ}, 2MP: シミー
-  - MK(+3)(g), 前投げ, DI, ...
-  - MK(+3)(g), 後退, {通常投げ}, 2MP: シミー
-  - 後退, {通常投げ}, 2MP: シミー
 
 ヒットもガードも同じルートでいい。
 
-## 端のキャンセルラッシュと強昇竜からの攻め
+## キャンセルラッシュ
 
-（反撃設定 > ダウンリバーサル: 通常投げ）
-（反撃設定 > ダウンリバーサル: 何もしない）
+- 2MP, CR MK, 2HP, 強スピン
+  - 中ホーン
+    - 弱リンク, 後退
+    - 弱リンク-Sレオパード, ...
+  - {端} 弱ホーン, 強昇竜
+    - LK, 前投げ/後退
+- 2MP(g), CR MK
+  - 投げ: 1F遅らせる
+  - 後退
 
-- {端} 2MP, CR MK, 2HP, 強スピン, 弱ホーン, 強昇竜, LK
-  - 前投げ, ...
-  - 後退, {通常投げ}, 2MP, CR MK, ...
-- 2MP(g), CR MK: 連続ガードで+5
-  - 前投げ: 最速は空振りするので、1F遅らせる
-  - 後退, {通常投げ}, 2MP, CR MK, ...
-
-## インパクト返し
+## インパクト返しのコンボ
 
 （ドライブインパクトへの対応練習）
 
-- DI(pc), ステップ, 2MP, 中スピン-リンクMK, 中ホーン
-  - ステップ, 6HP, ...
-- {端} DI(pc), ステップ, 2MP, 中スピン-リンクMK, 弱ホーン, 弱昇竜, ...
+- DI(pc), ステップ, 2MP, 中スピン-Sハーベスト
+  - 中ホーン, 弱リンク, 後退
+  - {端} 弱ホーン, 弱昇竜, 弱リンク, ...
 
 起き攻めは確反のルートと同じ。
 
@@ -173,7 +180,7 @@ MK持続当ての起き攻めでも使える。
 - 2LP, 2LP, CR 2LP, 2HP, 強スピン, DR 2MP, 強ホーン, SA3
 - {端} 2LP, 2LP, CR 2LP, 2HP, 強スピン, 弱ホーン, 中昇竜
 
-## {端} +36 の攻め
+## 端の弱昇竜からの攻め
 
 - {端} DR MK, MK-HK, 弱ホーン, 弱昇竜, 弱リンク
   - MK(+3), MK-HK, 弱ホーン, 弱昇竜, ...
@@ -183,62 +190,32 @@ MK持続当ての起き攻めでも使える。
     - 後退
   - 後退: 最速投げ以外にシミー
 
-## {端} +22/+23の攻め
+## 端の強昇竜からの攻め
 
 （ダウンリバーサル: 通常投げ 3Fディレイ）
+（ダウンリバーサル: 前方ジャンプ）
 （ダウンリバーサル: 何もしない）
 
-- {端} 強昇竜, LK
-  - MK, 2LP, 弱スピン, 2MK
-    - MK, LK, ...
-    - 前投げ
-    - 後退
-  - MK(g), 2LP, ガード
+- {端} DR MK, MK-HK, 弱ホーン, 強昇竜, LK
   - 前投げ
-  - 後退: シミー
+    - {前方ジャンプ}, 昇竜
+  - 後退
     - {通常投げ}, HP(pc), ...
+    - {前方ジャンプ}, 対空
 
  <!-- ---- この辺りから優先度検討中 ---- -->
 
-## ラッシュ下段
-
-- DR 2LK, MK-HK, 強ホーン
-  - DR 2LK, MK, ...: 目押し
-  - {端} HP: +4
-    - 前投げ
-    - 後退: シミー
-- {端} DR 2LK, MK-HK, 弱ホーン, 強昇竜
-  - LK: +4
-    - 前投げ
-    - 後退: シミー
-- DR 2LK(g), MK, 弱グライド-6P
-  - DR 2LK, MK, ...: 目押し
-  - {端} HP: +4
-    - 前投げ
-    - 後退: シミー
-- DR 2LK(g), MK, 弱グライド(g), ガード
-
 ## 中段の崩し
 
-（ダミー設定 > 相手の動作: しゃがみ）
-
-- 6MK-HK
-  - ステップ, 2MK
-  - ステップ, ガード
 - 6MK(g), ガード
+- 6MK-MK
+  - DR 2LK/6MK, ...
 
-## 下段からの崩し
+## 下段の崩し
 
-（ガード: ランダム）
-（ガード切り替え: ランダム）
-（起き上がり: 後方受け身）
-
-立ちヒット確認してコンボにする。
-
-- {立} 2MK-HK, 強ホーン
-  - DR MK, MK
-  - DR 前投げ: 少し長めに走って目押しで重ねる
 - 2MK(g), ガード
+- 2MK-HK, 強ホーン
+  - DR 2LK/6MK/投げ, ...
 
 ## 6Fの確反
 
@@ -251,9 +228,23 @@ MK持続当ての起き攻めでも使える。
 
 ## SA1でダメージを伸ばすコンボ
 
+- HP(pc)-HP, DR 2MP, 中スピン-Sハーベスト, SA1, OD昇竜
+- DI(pc), ステップ, 2MP, 中スピン-Sハーベスト, SA1, OD昇竜
+- DI(壁), 2MP, 中スピン-Sハーベスト, SA1, OD昇竜
+
 ## SA2でダメージを伸ばすコンボ
 
+- 2MP, CR MK, 2HP, 強スピン, SA2
+- HP(pc)-HP, DR 2MP, 中スピン-Sハーベスト, SA2
+- DI(pc), ステップ, 2MP, 中スピン-Sハーベスト, SA2
+- DI(壁), 2MP, 中スピン-Sハーベスト, SA2
+
 ## SA3でダメージを伸ばすコンボ
+
+- 2MP, CR MK, 2HP, 強スピン, DR 2MP, 強ホーン, SA3
+- HP(pc)-HP, DR 2MP, 中スピン-Sハーベスト, 中ホーン, SA3
+- DI(pc), ステップ, 2MP, 中スピン-Sハーベスト, 中ホーン, SA3
+- DI(壁), 2MP, 中スピン-Sハーベスト, 中ホーン, SA3
 
 ## 端の最大確反
 
@@ -266,22 +257,6 @@ MK持続当ての起き攻めでも使える。
   - 前投げ
   - 後退: シミー
 - {端} 弱昇竜, 2LK, 6MK(g), 2LP, ガード
-
-## ラッシュ中段
-
-- DR 6MK
-
-## ラッシュ下段
-
-- DR 2LK
-
-## 中段のヒット確認
-
-- 6MK-MK
-
-## 下段のヒット確認
-
-- 2MK-HK
 
 ## マレットスマッシュを使った攻め
 
@@ -344,3 +319,15 @@ MK持続当ての起き攻めでも使える。
 - DR MK, 2MP, ODグライド-6P, J.HK, ...
 - DR MK(g), 2MP, 弱グライド, ガード
 - DR MK(g); 前投げ: 1F遅らせる
+
+## 差し返しの練習
+
+（差し返しの練習）
+
+- {2MK/2HK}, 2HK, 強リンク, MK(+3), ...
+- {2MK(g)}, 2MK, ガード
+
+## HPのヒット確認
+
+- HP(g), ガード
+- HP-HP, ODホーン
