--- a/games/Street-Fighter/Six/characters/Elena/エレナの立ち回り.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの立ち回り.md
@@ -44,6 +44,11 @@ LKを空振りして6HPを止めにくるのを誘ってから6HPで差し返す
 
 相手の中足の外で止まるくらいのリンクシンクを置いたり、マレットで下段を避けながら触ったりするのも相手からするとノイズになる。
 
+HPをガードさせられそうならできるだけ狙う。
+ガードさせるだけでもゲージを削れるし、ヒットしたらODホーンで2500減る。端なら3500減る。
+
+たまにバクステを置くといい。エレナは遠めの方が得意。
+
 ## 差し合いの距離
 
 6HPがギリギリ当たる間合いでいい。
