--- a/games/Street-Fighter/Six/characters/Elena/エレナのコンボ.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナのコンボ.md
@@ -133,6 +133,8 @@ MKや2HPは近くないと届かないので2MPの方が確実。
 
 MPパニカン時は強制立たせ効果がある。
 
+DR MP-MPはガードの時立ちだったらTCも立ちで当たる。
+
 ## 2MP, グライド
 
 2MP単発のヒット確認は厳しいので、グライドまで入れ込んでからヒット確認して派生させる。
