--- a/games/Street-Fighter/Six/tips/トレーニングモードの使い方.md
+++ b/games/Street-Fighter/Six/tips/トレーニングモードの使い方.md
@@ -57,12 +57,21 @@
 
 ON/OFFすると投げ抜けだけでなくジャストパリィやファジーの練習にも使える。
 
+## 対戦機能
+
+CPUレベル7がダイヤから新米マスターくらいある。
+ハイマスになると10戦やって10勝できるくらい。
+
+CPUレベル8がハイマスくらいある。ハイマスでも普通に3先で負ける。なんならプロでも3連勝できないこともある。
+
 ## リプレイ機能
 
 アップデートでリプレイの途中からプレイヤー操作できるようになった。
 
 トレモのリプレイ機能は、まずリーサルのやり直しに使うのが簡単で役に立つ。できるはずのリーサルを逃したらリプレイに戻って練習する。
 慣れてきたら、リーサルがあったかどうかわからない状況のリーサルを研究するのもいい。空中ヒットとか、限定的な状況のは特に。
+
+リプレイは意味わからん攻防の有利不利を確認するのにも使える。
 
 ## その他
 
