--- a/shared/human/tips/痩せる.md
+++ b/shared/human/tips/痩せる.md
@@ -14,3 +14,13 @@
 糖質制限よりも脂質制限、が優先。
 
 痩せて見えるようにするには、まずフェイスライン。
+
+食事を減らすと体力が落ちて運動量が減ってしまう。
+特に女性は食事を減らすより運動した方が痩せやすいので、無理に食事を減らさなくていい。
+
+痩せる目的として、主に見た目と健康のふたつがある。
+どちらを重視するかを重視しないといけない。ただ、健康を損なってしまうと見た目も悪くなることが多い。
+
+カロリーを抑えるには、
+野菜や豆腐、胸肉などの水分が多くて糖質や脂質が低い食材を食べる。
+朝食を遅く、夕食を早く食べて、昼食を減らす。
