--- a/shared/information/情報.md
+++ b/shared/information/情報.md
@@ -176,3 +176,8 @@ communication, decision, observation あたりは関連がある。
 いつ役に立つのかわからない情報は集めておく。
 
 情報は手段でしかない。重要なのは情報を使ってリスクを下げること。成功率や利益率を上げること。
+
+特に目立った情報がない、というのも情報。
+
+物理的には複雑さと「情報」がほぼ同じもの。
+https://share.google/qJIl8gO83xEZQZjbk
