--- a/shared/music/vocal/training/tips/リズムを取る.md
+++ b/shared/music/vocal/training/tips/リズムを取る.md
@@ -1,3 +1,11 @@
+## 概要
+
+歌は声よりも息の段階でリズムを取る。
+
+体でリズムを取ると横隔膜が動いて自然とリズムに乗りやすい。
+
+## その他
+
 体でリズムをとる。
 
 歌う時は腰でリズムをとる。
@@ -58,3 +66,7 @@ BPM 150とかになるとまず8拍で手拍子するのが困難。腕もげる
 
 まずはピッタリにリズムを合わせて、その上で要所を強調するために走ったり遅れたりする。
 リズムが走ると焦るような印象になるし、遅れると苦しみやだらしなさになったりする。
+
+拍子が4/4でない曲はアクセント強めの方が聞いてる方もリズムを取りやすいかも。
+
+歌は声よりも息の段階でリズムを取る。
