--- a/shared/trust/どこまで信頼するか.md
+++ b/shared/trust/どこまで信頼するか.md
@@ -7,3 +7,5 @@
 バナナは味を信頼するべきで、釘を打つ機能を期待するべきではない。必要な機能だけを見て信頼して、それだけを任せる。
 
 信頼する必要がないところは信頼しない。たとえば仲が良くても貴重品を置いて席を立たない。誰が相手でも貴重品は持ち歩けばいい。
+
+信頼はその範囲を限定するべきで、全面的に信頼するのも、全面的に信頼しないのも間違っている。
