--- a/shared/voice/training/tips/声色を変える.md
+++ b/shared/voice/training/tips/声色を変える.md
@@ -96,6 +96,8 @@ Aimer『I beg you』とか。
 
 ハスキーボイスは技術でうまく出すのが難しくて、才能の面が強い。
 
+ハスキーボイスは不安定な声の出し方なので真似するべきではない。喉を痛める。
+
 ## 色っぽい声
 
 色っぽい声を出すには、息漏れではなく息の太さが重要。結果的に漏れるだけ。
