--- a/shared/health/medicine/薬.md
+++ b/shared/health/medicine/薬.md
@@ -1,3 +1,6 @@
 薬の効き目の話は、薬が効いて治ったのか、自己治癒力で勝手に治ったのか区別しないといけない。それが区別できてないなら意味がない。
 
-食前、食間の薬は胃が空のときに飲む薬。
+食前の薬は胃が空のときに飲む薬。
+
+食間、食後となっている薬は、胃の中身があるうちに飲むということ。
+特に食後のみとなっているなら胃がいっぱいのとき。
