--- a/shared/voice/training/tips/高い声を出す.md
+++ b/shared/voice/training/tips/高い声を出す.md
@@ -41,3 +41,5 @@
 高音になるほど裏返りやすくなる。安易に裏声に逃げていると高音の地声のバランスがわからない。
 
 高音域は声帯をしっかり閉じないと息が漏れる。いわゆるミックスボイスのレッスンで息と声のバランスと言われるのは、鍛えてないと息が漏れるので、できるだけ漏らさないようにするってこと。あえて息を混ぜる必要は全くない。単に鍛えてないと息が漏れるのは仕方ないってだけ。
+
+無理やり押さえつけたような高音ではなく、開放された高音を目指す。力任せに出すのではなく、裏返るギリギリの均衡が必要。
