--- a/shared/voice/training/良い声とは.md
+++ b/shared/voice/training/良い声とは.md
@@ -59,3 +59,5 @@ http://hira0888.life.coocan.jp/asu124.html
 
 他にない声は良い。無理に普通にする必要はない。
 ただ、歌うときにピッチを変えづらいとか他の課題と複合した場合にどうするかが問題。良い歌い方と上手く統合させる必要がある。
+
+裏声は表現の幅が狭い。まずは地声で出すことを考える。
