--- a/games/Street-Fighter/Six/characters/Elena/エレナの立ち回り.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの立ち回り.md
@@ -8,6 +8,8 @@
 無理に攻めなくてもいいけど、攻められるなら攻めた方がいい。投げで離れて終わってもいい。
 攻めもスピンホーンや投げですぐ離れてしまうが、距離があったらまぁなんとかなる。
 
+エレナは守りが弱いので、あまり下がれるキャラではない。むしろ前に出ていかないといけないキャラ。
+
 ## 差し合い
 
 長い前強、長い中下段、リンクシンクで差し込みは強いけど、差し返しが弱い。
@@ -91,7 +93,12 @@ MP/6MK/2MKがだいたい同じくらいの距離。
 - 2HK: 発生11F、遠めの大足確反とか
 - 6HP: 発生17F、かなり遠めでも届きやすい
 
-差し返しは弱い。
+差し返しは弱い。特に中足への差し返しが弱い。
+
+ゲージを使うなら2MP, CR MKが一番安定する。
+2MP, ODグライドは先端だと届かないことがある。
+
+2MP(pc), 強スピンは先端だと当たり方が悪くて繋がらないことがある。
 
 特に中足に差し返す技がなくて、相手の中足が届く距離は下がらないといけない。
 
