--- a/shared/thinking/思考の限界.md
+++ b/shared/thinking/思考の限界.md
@@ -1,3 +1,18 @@
+## 思考は遅い
+
+反射に比べると思考は遅い。
+
+思考は遅いので、できれば問題に直面する前から考えておくといい。
+ただ、全てを予見することはまずできない。
+できるだけコストをかけずに、できるだけ予見する。バランスが大事。
+
+## 思考は行動を遅らせる
+
+思考は行動の邪魔になる。
+最終的には、無意識に、意味を考えずにできるようにする。何を無意識にするべきかを思考する。
+
+## 思考は検証されていない
+
 答えは仮説の一種で、検証しなければならない。
 
 思考はあくまでもシミュレーションでしかない。
@@ -9,5 +24,6 @@
 思考は、良い仮説を立てるためのもの。
 いくつかの仮説を出して、良いものを選ぶ。
 
-思考は行動の邪魔になる。
-最終的には、無意識に、意味を考えずにできるようにする。何を無意識にするべきかを思考する。
+## その他
+
+他人がいると盲点が減る。
