--- a/shared/trust/intimacy/tips/誰かと親しくなる.md
+++ b/shared/trust/intimacy/tips/誰かと親しくなる.md
@@ -83,3 +83,46 @@
 相手により好かれたいなら、自分のことを考えさせるような質問もいい。ただ、めんどくさい質問なので、そもそもある程度好かれていないと使えない。
 
 友人付き合いが長続きしないのは、次の人と会ったらそっちに興味が移るのもある。代替可能なものだと思ってる。
+
+特に友人から恋人に仲を深めるには、相手がセックスを受け入れるかどうかを判断できないといけない。
+段階を踏んで、途中で拒否されるようなら無理に踏み込まないし、無理に段階を発展させるべきでもない。
+「腕から肩」と「腕から腰」あたりに大きな境界がある。「腕から肩」の中で段階的に踏み込んで、それ以上の関係に進むかどうか判断する。
+
+> スキンシップをするときには、女性の身体に触れると同時に言葉を投げかけると良いです。
+>
+> [スキンシップの行い方を習得すると、恋愛のさまざまな場面で役立つ](https://love-style-jp.com/sex/skinship.html)
+
+映画デートは、共通の話題作りからの会話とか映画館で手を握るとかの段階が目的。
+
+雑談のコツは、共通点を見つけること。
+基本情報、趣味や興味、特技や特徴などを自己紹介としてまとめておくとわかりやすい。
+当たり障りのないところでいうと天気とか体調とか。
+
+相手に興味を持って接すること。
+
+同じ場所で同じ時間を過ごすのは、相手からも関わっていい、と承認している。
+
+相手に会う前から喜びそうな話題を仕入れておく。
+
+アプローチをかける。接近する。
+
+親しくなるところは愛そのものの文脈ではないので、分離してもいいかも。誰かと親しくなること全般。
+
+恋人を目指すとしても友人を目指すとしても過程はあまり変わらない。
+恋人を目指すなら表明しておいた方がいいけど。
+
+大人になってから友人が少ないと感じたら、まずは知人を増やさないといけない。
+学校に通っていた頃はクラスが自然と知人というか、教室に行けばクラスの 40 人にはとりあえず接触しようと思えば接触できる。
+会社であればオフィスにいる人にはとりあえず接触しようと思えば接触できる。
+一番自然なのはオフィスにいる人と雑談して、友人になること。
+リモートワークなどでもチャットや通話で友人になることはできる。
+
+スポーツサークルとか、ボランティアとか、共通の仕事をするイベントに参加するのもいい。
+
+自己開示したほうがいいのは面白い失敗談、恥ずかしい話とか。また、開示したら相手に話を振る。
+
+二人の間だけの秘密を共有すると親しくなりやすいというのはある。性癖とか犯罪とかかな。
+
+誰かの話を聞いて「ふーん」ってなるけど、親しくなりたいなら「手伝わせて！」でもいい。
+
+誰かと親しくなりたいと思うことはわりと少ないけど、べつに友人にならなくても知人と親しくなっておいて損はないと思う。まあ、ストーカーとか極端な関係になることもまずないし。
