--- a/shared/trust/信頼関係を築く.md
+++ b/shared/trust/信頼関係を築く.md
@@ -34,3 +34,6 @@
 必要になってから求めるのでは信用されない。
 まず必要かどうかわからない信頼関係を作っておいて、いざというときは助けてもらう。
 先に投資する。
+
+嫌われたら困ると思うのは、期待に応えようと、信頼されようとしてるから。
+逆に、信頼とかあんま気にしてない人は嫌われることも気にしてない。
