--- a/shared/trust/intimacy/tips/知人になる.md
+++ b/shared/trust/intimacy/tips/知人になる.md
@@ -44,3 +44,11 @@ LINE よりも X やインスタのようにパブリックタイムラインが
 
 学校や職場の人間関係で友人のように親しく付き合っていても、個人的にも連絡先を交換しておかないと連絡が取れなくなる。
 基本中の基本なんだけど、学校や職場のような場に頼って付き合うことに慣れていると忘れがち。
+
+「相手に連絡できること」が知人の一番の条件だと思っている。
+もっと厳密にいうと「相手に接触できること」かな。連絡先を知らなくても、学校や職場で会って声をかけられるなら知人。
+
+その上で、さらに接触を増やすには共通点が多いと有利。
+相手の興味や関心を知って、話したり、会ったりしやすいようにする。
+
+友人や知人の場合、お互いに興味や関心を知っておいて、相手が興味あるニュースの話とかを優先してする。話題を探る手間がかからない。
