--- a/shared/voice/training/tips/声の雑音を減らす.md
+++ b/shared/voice/training/tips/声の雑音を減らす.md
@@ -17,3 +17,6 @@
 声がガラガラして雑音が混じるのは余計な場所が閉じて、振動している。まずは雑音のない声が出せないといけない。その上で表現として、意識的に声色を変える。
 
 変なとこで鳴るとぴよぴよした音になる。口笛みたいな。
+
+まずは声道を広げて、声帯と呼吸だけで声を出すのが基本。
+喉の位置はまずは高くても低くてもいい。
