--- a/shared/voice/training/tips/声を出す.md
+++ b/shared/voice/training/tips/声を出す.md
@@ -258,3 +258,5 @@ https://youtu.be/OEjipkH95_0?si=9RxpD90fqQnpNSXy
 軽い相槌のように「うんうん」の感覚で声を出す。最初は息が持たないかも。
 
 声帯で声を出して強すぎるとしても、練習段階では別にいい。最終的にはもっと深いところで鳴らして柔らかく深い声にするのと、響きを良くしていく。抜いて声を出すのはもっと後。
+
+声の基本は呼吸と声帯だけど、美しい声のためには声道の形を変えたりして音の響きを追求していく。
