--- a/games/Street-Fighter/Six/characters/Elena/エレナの練習メニュー.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの練習メニュー.md
@@ -324,8 +324,8 @@ MK持続当ての起き攻めでも使える。
 
 （差し返しの練習）
 
-- {2MK/2HK}, 2HK, 強リンク, MK(+3), ...
-- {2MK(g)}, 2MK, ガード
+- {2MK(g)}, ガード
+- {2MK/2HK/2HK(g)}, 2HK(pc), 強リンク, MK(+3), ...
 
 ## HPのヒット確認
 
