--- a/games/Street-Fighter/Six/characters/Elena/エレナのコンボ.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナのコンボ.md
@@ -167,12 +167,28 @@ ODグライドは安定する。
 - 2MP, CR MK, 2HP, 強スピン, DR 2MP, CR 2HP, 弱ホーン, SA3: 5076
 - 2MP, CR MK, 2HP, 強スピン, DR 2MP, ODリンク-Sハーベスト, 中ホーン, SA3: 5180
 
-## 2MP(+4)
+## 2MP(+4), 強スピン
 
 - 2MP(+4), 強スピン, 中ホーン: 2640
 - {端} 2MP(+4), 強スピン, 弱ホーン, 強昇竜: 3270
 - 2MP(+4), 強スピン, DR 2MP, SA1, 強昇竜: 3260
 - {端} 2MP(+4), 強スピン, DR 2MP, 強ホーン, SA3: 4817
+
+火力は高いけど、遠めだと当たらない。特にしゃがみへの判定が弱すぎる。
+
+## 2MP(+4), リンク
+
+- 2MP(+4), 弱リンク-ハーベスト, 強昇竜: 2620
+- 2MP(+4), ODリンク-Sハーベスト, 強昇竜: 3020 (最速だとカス当たりになる)
+- 2MP(+4), ODリンク-Sハーベスト, 中ホーン: 2860
+- {端} 2MP(+4), 弱リンク-Sハーベスト, ODホーン, 強昇竜: 3300
+- {端} 2MP(+4), ODリンク-Sハーベスト, 弱ホーン, 弱昇竜: 3380
+- 2MP(+4), 弱リンク-ハーベスト, SA1, 強昇竜: 3460
+- 2MP(+4), ODリンク-ハーベスト, SA1, 強昇竜: 3860
+- 2MP(+4), ODリンク-Sハーベスト, SA2: 4140
+- 2MP(+4), ODリンク-Sハーベスト, 中ホーン, SA3: 4860
+
+モダンの場合、ハーベストは180、Sハーベストは260下がる。
 
 ## MK
 
