--- a/games/Street-Fighter/Six/characters/Marisa/技.md
+++ b/games/Street-Fighter/Six/characters/Marisa/技.md
@@ -1,3 +1,19 @@
+## 技の長さ
+
+- 2LP
+- 2HP
+- LP
+- 4HP
+- 2LK
+- MP
+- 4HP-h
+- 2MP
+- MK
+- 2HK
+- 6MP
+- HK
+- HP
+
 ## 技の発生と長さ
 
 | 技               | 発生  | 長さ |
