--- a/games/Street-Fighter/Six/characters/Lily/リリーの対策.md
+++ b/games/Street-Fighter/Six/characters/Lily/リリーの対策.md
@@ -25,3 +25,5 @@ ODなら割られるけど、ダメージは低いので出してしまっても
 リリー戦は近づきすぎないで、ウインドを咎められる位置を維持する。
 
 リリーのスパイアはジャスパを狙いつつDリバも仕込む。ジャスパできたらインパクトが確定。
+
+HP, 中ウインドで対空してくる場合、カウンターでしか繋がらない。通常ヒットにウインドを漏らすと大攻撃が入る。空ジャンプは一つの対策。
