--- a/games/Street-Fighter/Six/characters/Terry/テリーの対策.md
+++ b/games/Street-Fighter/Six/characters/Terry/テリーの対策.md
@@ -1,3 +1,5 @@
+## 差し合い
+
 テリーを相手にジャンプするのはあまり強くない。
 シュートにジャンプが引っかかるし、対空も強い。
 
@@ -7,3 +9,17 @@
 - パワーウェイブ
 - バーンナックル
 - クラックシュート
+
+## ガードして不利になる技
+
+- HP: +1
+- 強ウェイブ: +5、橋では投げ間合い
+- 中ナックル(+7): +1から+2、投げ間合い
+
+強ウェイブはキャンセルで出してくるとHPからでも8Fあるので割り込みを狙うのはあり。
+テリーが暴れても弱ナックルくらいだけど、先端以外は連続ガード。
+DR HPでも4Fある。
+
+## 確反
+
+- 弱ナックル: -5、中段
