--- a/games/Street-Fighter/Six/characters/Elena/エレナの特徴.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの特徴.md
@@ -33,17 +33,20 @@
 - 2LP
 - 2LK
 - MK
+- {C} LP
 - LK
 - 弱グライド
 - 2MP = {屈} MP
 - {屈} HP
 - 2MK = 6MK = {立} MP = {立} HP = ODグライド
-- DR 2LK, MK
+- {C} 強グライド
+- DR 2LK, MK = {C} HK
 - 2HK
 - 6HP
 - ハーベスト
 - DR MK, 2MP
 - DR 6MK, MK
+- {C} 3HK
 - DR 2MK, 2MP = 弱リンク-レオパード
 - J.MK
 - J.HK
@@ -83,11 +86,10 @@
 
 ## モダン操作
 
-スライディングやグライドはないが、致命的というほどではない。
 モダンでも全然使える。
+ただ、スライディングがないせいでかなり差し合いが弱くなっている。
 
-なぜかAC3が中ホーンも入るのに弱ホーン。
-中ホーンの方がダメージは高い。まぁ、弱ホーンは状況が良いので良し悪し。
+なぜかAC3が中ホーンも入るのに弱ホーン。しかも2F遅れているせいで端の追撃で強昇竜が入らない。
 
 生のリンクシンク派生にモダン補正が載ってしまう。
 スピンからのキャンセルリンクには載らない。
