--- a/games/Street-Fighter/Six/characters/Elena/エレナのコンボ.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナのコンボ.md
@@ -183,9 +183,12 @@ ODグライドは安定する。
 - 2MP(+4), ODリンク-Sハーベスト, 中ホーン: 2860
 - {端} 2MP(+4), 弱リンク-Sハーベスト, ODホーン, 強昇竜: 3300
 - {端} 2MP(+4), ODリンク-Sハーベスト, 弱ホーン, 弱昇竜: 3380
+- {端} 2MP(+4), ODリンク-Sレオパード, ODホーン, 強昇竜: 3600
 - 2MP(+4), 弱リンク-ハーベスト, SA1, 強昇竜: 3460
 - 2MP(+4), ODリンク-ハーベスト, SA1, 強昇竜: 3860
+- {端} 2MP(+4), ODリンク-Sレオパード, ODホーン, SA1, 強昇竜: 4080
 - 2MP(+4), ODリンク-Sハーベスト, SA2: 4140
+- 2MP(+4), ODリンク-Sレオパード, ODホーン, SA2: 4440
 - 2MP(+4), ODリンク-Sハーベスト, 中ホーン, SA3: 4860
 
 モダンの場合、ハーベストは180、Sハーベストは260下がる。
@@ -378,6 +381,16 @@ MKは近くないと当たらない。
 
 - 6HP-HP-HP: 2000
 
+## HK(pc)
+
+- HK(pc), 強昇竜: 2480
+- HK(pc), 弱ホーン: 2180
+- {端} HK(pc), ODホーン, 強昇竜: 3260
+- HK(pc), SA1, 強昇竜: 3540
+- HK(pc), SA2: 3880
+- HK(pc), ODホーン, SA2: 4240
+- HK(pc), SA3: 5080
+
 ## {空} J.MP-MP
 
 - {端} J.MP-MP, 強昇竜: 2520
@@ -463,26 +476,36 @@ MKは近くないと当たらない。
 
 ## Sマレット(c)
 
+## 強グライド(pc)
+
+- 強グライド(pc), MK-HK, 強ホーン: 2690
+
 ## DI(pc)
 
-- DI(pc), ステップ, 2MP, 中スピン-リンク-MK, 中ホーン: 3240
-- {端} DI(pc), ステップ, 2MP, 中スピン-リンク-MK, 弱ホーン, 中昇竜: 3550
-- DI(pc), ステップ, HP-HP, DR 2MP, 中スピン-リンク-MK, 中ホーン: 3460
-- {端} DI(pc), ステップ, HP-HP, DR 2HP, 中スピン-リンクMK, 弱ホーン, 強昇竜: 3649
-- DI(pc), ステップ, 2MP, 中スピン-リンク-MK, SA1, 強昇竜: 3640
-- DI(pc), ステップ, 2MP, 中スピン-リンク-MK, SA2: 4040
-- DI(pc), ステップ, 2MP, 中スピン-リンク-MK, 中ホーン, SA3: 5240
+- DI(pc), ステップ, 2MP, 中スピン-Sハーベスト, 中ホーン: 3240
+- {端} DI(pc), ステップ, 2MP, 中スピン-Sハーベスト, 弱ホーン, 中昇竜: 3550
+- {端} DI(pc), ステップ, 2MP, 中スピン-Sハーベスト, 弱昇竜 2回: 3540
+- DI(pc), ステップ, HP-HP, DR 2HP, 弱スピン-Sハーベスト, 中ホーン: 3562
+- DI(pc), ステップ, HP-HP, DR 2HP, 強スピン, 強ホーン: 3397 (運びが大きい)
+- {端} DI(pc), ステップ, HP-HP, DR 2HP, 中スピン-Sハーベスト, 弱昇竜, 中昇竜: 3716
+- DI(pc), ステップ, 2MP, 中スピン-Sハーベスト, SA1, 強昇竜: 3640
+- DI(pc), ステップ, HP-HP, DR 2HP, 弱スピン-Sハーベスト, SA1, 強昇竜: 3914
+- DI(pc), ステップ, HP-HP, DR 2HP, 弱スピン-Sハーベスト, SA1, 弱ホーン: 3890
+- DI(pc), ステップ, 2MP, 中スピン-Sハーベスト, SA2: 4040
+- DI(pc), ステップ, HP-HP, DR 2HP, 弱スピン-Sハーベスト, SA2: 4382
+- DI(pc), ステップ, 2MP, 中スピン-Sハーベスト, 中ホーン, SA3: 5240
+- DI(pc), ステップ, HP-HP, DR 2HP, 弱スピン-Sハーベスト, 中ホーン, SA3: 5562
 
 ## DI(壁)
 
-- DI(壁), 2MP, 中スピン-リンク-MK, 弱ホーン, 中昇竜: 3390
-- DI(壁), HP-HP, DR 2HP, 中スピン-リンク-MK, 弱ホーン, 強昇竜: 3489
-- DI(壁), 2MP, 中スピン-リンク-MK, 弱ホーン, OD昇竜: 3510
-- DI(壁), 2MP, 中スピン-リンク-MK, SA1, 強昇竜: 3480
-- DI(壁), 2MP, 中スピン-リンク-MK, SA2: 3880
-- DI(壁), 2MP, 中スピン-リンク-MK, ODホーン, SA2: 4000
-- DI(壁), 2MP, 中スピン-リンク-MK, 弱ホーン, SA3: 5030
-- DI(壁), HP-HP, DR 2HP, 中スピン-リンク-MK, 弱ホーン, 強昇竜: 3489
+- DI(壁), 2MP, 中スピン-Sハーベスト, 弱ホーン, 中昇竜: 3390
+- DI(壁), HP-HP, DR 2HP, 中スピン-Sハーベスト, 弱ホーン, 強昇竜: 3489
+- DI(壁), 2MP, 中スピン-Sハーベスト, 弱ホーン, OD昇竜: 3510
+- DI(壁), 2MP, 中スピン-Sハーベスト, SA1, 強昇竜: 3480
+- DI(壁), 2MP, 中スピン-Sハーベスト, SA2: 3880
+- DI(壁), 2MP, 中スピン-Sハーベスト, ODホーン, SA2: 4000
+- DI(壁), 2MP, 中スピン-Sハーベスト, 弱ホーン, SA3: 5030
+- DI(壁), HP-HP, DR 2HP, 中スピン-Sハーベスト, 弱ホーン, 強昇竜: 3489
 
 ## DI(g)(壁)
 
