--- a/games/Street-Fighter/Six/characters/Elena/エレナの特徴.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの特徴.md
@@ -46,12 +46,14 @@
 - ハーベスト
 - DR MK, 2MP
 - DR 6MK, MK
-- {C} 3HK
-- DR 2MK, 2MP = 弱リンク-レオパード
+- DR 2MK, 2MP
+- {C} 3HK = {C} DR HK, MK
+- 弱リンク-レオパード
 - J.MK
 - J.HK
 - 弱リンク-マレット
 - 強リンク-レオパード
+- {C} DR 3HK
 - Sハーベスト
 - Sレオパード
 - Sマレット
