--- a/games/Street-Fighter/Six/characters/Elena/エレナの特徴.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの特徴.md
@@ -50,7 +50,7 @@
 - {C} 3HK = {C} DR HK, MK
 - 弱リンク-レオパード
 - J.MK
-- J.HK
+- J.HP
 - 弱リンク-マレット
 - 強リンク-レオパード
 - {C} DR 3HK
@@ -61,29 +61,29 @@
 ## ガードさせて有利になる技
 
 - MK: +1
-- リンクS-LK: +1
-- リンクS-HK: +3
+- Sレオパード: +1
+- Sマレット: +3
 
 ## 密着でガードされると確反がある技
 
 - LK: -4 (キャンセル可)
-- MP-MP: -10、しゃがみガードに当たらない (キャンセル可)
+- MP-MP: -10 (キャンセル可、しゃがみガードに当たらない)
 - HK: -4
 - 2MP: -4 (キャンセル可)
 - 2MK: -4
-- 2MK-HK: -9、しゃがみガードに当たらない (キャンセル可)
-- 2HP: -7
+- 2MK-HK: -9 (キャンセル可、しゃがみガードに当たらない)
+- 2HP: -7 (キャンセル可)
 - 2HK: -11
 - {C} 3HK: -10、先端で-2、6HPガード後の距離で-4くらい
 - 6HP: -4
 - 6HP-HP: -11、最後まで出し切って-16（連続ガード）
 - 昇竜: -24以上
-- スピン: -10以上、しゃがみガードに当たらない
-- ホーン: -9以上、しゃがみガードに当たらない
+- スピン: -10以上 (しゃがみガードに当たらない)
+- ホーン: -9以上 (しゃがみガードに当たらない)
 - グライド-6P: -13
-- リンク-LK: -5
-- リンク-MK: -9
-- リンクS-MK: -4
+- レオパード: -5
+- ハーベスト: -9
+- Sハーベスト: -4
 - SA1/2/3: -47以上
 
 ## モダン操作
