--- a/games/Street-Fighter/Six/characters/Elena/エレナのコンボ.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナのコンボ.md
@@ -361,9 +361,10 @@ MKは近くないと当たらない。
 - {端} HP(pc)-HP, DR 2HP, 中スピン-Sハーベスト, 弱ホーン, 強昇竜: 4133
 - {端} HP(pc)-HP, DR 2HP, 中スピン-Sハーベスト, 弱昇竜, 弱昇竜: 4081 +36
 - HP(pc)-HP, SA1, 強昇竜: 3720
-- HP(pc)-HP, ODスピン-Sハーベスト, SA1, 強昇竜: 4020
-- HP(pc)-HP, ODスピン-Sハーベスト, SA1, 弱ホーン: 3960
+- HP(pc)-HP, DR 2MP, 中スピン-Sハーベスト, SA1, 強昇竜: 4035
+- HP(pc)-HP, DR 2MP, 中スピン-Sハーベスト, SA1, 弱ホーン: 3984
 - {端} HP(pc)-HP, DR 2HP, 中スピン-Sハーベスト, 弱ホーン, SA1, 強昇竜: 4435
+- HP(pc)-HP, SA2: 4000
 - HP(pc)-HP, DR 2HP, 強スピン, SA2: 4188
 - HP(pc)-HP, ODスピン-リンクMK, SA2: 4420
 - {端} HP(pc)-HP, DR 2HP, 強スピン-Sハーベスト, 弱ホーン, ODホーン, SA2: 5020
