--- a/games/Street-Fighter/Six/characters/Elena/エレナの攻めの状況.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの攻めの状況.md
@@ -154,12 +154,23 @@ DR 6MK, MK-HK, 強ホーンとか、遠めで繋ぐと37になることがある
 
 端では弱ホーンから追撃した方がいい。
 
+## MK-HK, ODグライド-6P: 44
+
+- ステップ 2回: +4
+
 ## ~~MK-HK, 弱スピン: 36~~
 
 端では持続当てのフレームだけど、弱ホーン, 弱昇竜でいい。
 
 ## MK-HK, 中スピン: 43
 
+- 中スピン-S-Sマレット
+- 中スピン-S-S: +10
+  - 2MK(+2): ヒットで+6
+- ...-弱リンク: +30
+- - ...-弱リンク-Sマレット: 中段
+- ...-中リンク: +22
+- ...-強リンク: +20、左右入れ替え
 - 強リンク: +5でコパンの外
   - 2MP, 弱グライド
   - 2MK: 4F技と相打ちになるが、一部キャラには相打ちから2MPが入る
