--- a/games/Street-Fighter/Six/characters/Elena/エレナの攻めの選択肢.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの攻めの選択肢.md
@@ -82,6 +82,13 @@ MKの持続当てはド密着が強い。
 
 キャンセルできる技からとりあえず振っておく技。単発確認して派生すると起き攻めできる。
 
+## 2MK(+2): 10
+
+下段。
+
+ヒットでMKが繋がる。
+ガードされても-2で投げ間合いの外。
+
 ## DR 2LK: 13-17
 
 DR 2MKよりも攻め継続しやすい。
@@ -169,6 +176,8 @@ DR MK(+3)がヒットするとHP-HPも入る。
 リンクシンクの強弱で発生が変わる。当たったら同じ。
 
 ガードされても投げ間合いで+3になって、しかも後退がシミーになる。
+
+ちゃんと重ねたらインパクトも返せる。
 
 ## 詐欺飛び: 42
 
