--- a/shared/music/theory/rhythm/拍子.md
+++ b/shared/music/theory/rhythm/拍子.md
@@ -27,3 +27,6 @@ https://youtu.be/OOg6J5lfTBI?si=0klgfoRKy2vgaTqq
 拍子は大きく分けて偶数系と奇数系がある。
 
 ラテンなんかは6/8と3/4の組み合わせでできてる。
+
+4拍子を常に16ビートで捉えるのではなく、あえて4ビートでゆったり捉えたい場合もある。
+その時々で捉え方を変える。
