--- a/shared/voice/training/tips/小さな声を出す.md
+++ b/shared/voice/training/tips/小さな声を出す.md
@@ -13,3 +13,5 @@
 このアクションができなくて、無音からいきなり途切れたような音が鳴るのは音の鳴っている位置がおかしいかも。
 
 地声が勝手に大きくなってしまうのは息の支えが足りないのかも。もっと量を抑えないといけない。
+
+小声にも気の抜けたような軽い小声と、熱を押し殺したような重い小声がある。もっと種類を増やすこともできる。
