--- a/shared/voice/training/tips/高い声を出す.md
+++ b/shared/voice/training/tips/高い声を出す.md
@@ -43,3 +43,8 @@
 高音域は声帯をしっかり閉じないと息が漏れる。いわゆるミックスボイスのレッスンで息と声のバランスと言われるのは、鍛えてないと息が漏れるので、できるだけ漏らさないようにするってこと。あえて息を混ぜる必要は全くない。単に鍛えてないと息が漏れるのは仕方ないってだけ。
 
 無理やり押さえつけたような高音ではなく、開放された高音を目指す。力任せに出すのではなく、裏返るギリギリの均衡が必要。
+
+高い声はまず最大の息の強さで出すのが楽。息が弱くなるほど低くなりやすい。弱くて高い声はまず強くて高い声を出せないと出ない。
+
+喉が温まってないといきなりは高い声が出にくい。
+歌いやすい曲をリストアップしておいて最初に歌う。
