--- a/games/Street-Fighter/Six/characters/Elena/エレナの立ち回り.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの立ち回り.md
@@ -51,6 +51,9 @@ HPをガードさせられそうならできるだけ狙う。
 
 たまにバクステを置くといい。エレナは遠めの方が得意。
 
+Mエレナはスライディングがなくて下がる相手にやることが本当にない。
+スライディングがあったら相手も離れすぎると持続当てされるから大きく下がれない。
+
 ## 差し合いの距離
 
 6HPがギリギリ当たる間合いでいい。
