--- a/shared/action/行動.md
+++ b/shared/action/行動.md
@@ -1,5 +1,7 @@
 # Action
 
+行動とは検証のことであって、検証になっていなければ行動とはいえない。
+
 検証。
 
 特定の目的を達成するための活動。
@@ -264,3 +266,6 @@
 「案ずるより産むが易し」
 
 実行の一種だけど、求める結果の方向性としての目的がある。
+
+「行動しない人間ほど偏見や固定観念が多い。やってみればすぐ分かることも、自分では動かないので思い込みが見直されることもない。不思議な話だけど、思考の柔軟性は行動量に依存してる。」
+（佐藤航陽 https://x.com/ka2aki86/status/947388902796488704?s=12）
