--- a/shared/art/芸術.md
+++ b/shared/art/芸術.md
@@ -302,3 +302,5 @@ https://ja.wikipedia.org/wiki/%E9%BB%92%E3%81%AE%E6%AD%A3%E6%96%B9%E5%BD%A2
 
 「心に素直であろうとする姿勢、それは芸術に対する愛です」
 『ガールクラッシュ』
+
+クリエイティブなものが好きな人間としては、作者と作品を分けて考えられない知性のない人間が増えるのは困る。良い作品が無駄に潰されてしまう。
