--- a/shared/communication/channels/sex/tips/男らしさ.md
+++ b/shared/communication/channels/sex/tips/男らしさ.md
@@ -12,3 +12,5 @@
 男は女が好きだから、女らしいものが好きになるはず。それなのに男らしいものしか好きじゃないってのはゲイでは？
 
 戦国時代とか男色の本場だし、やはり男性が男性的な価値観を良しとする社会はゲイが作ってると思う。
+
+男性的なものが好きとか、モテるために男性的なものを取り入れるのはわかるけど、男性的なもの「しか」好きじゃないのはもうゲイなんよ。
