--- a/shared/logic/理解.md
+++ b/shared/logic/理解.md
@@ -31,3 +31,5 @@ https://youtu.be/89Kbf7aXMx0?si=oyRo-lWqOFmHSnp4
 「分け方がいくつもあるということは、分かり方もいくつもある。」（ゆる生態学ラジオ）
 
 どうやって理解していないことに気づくか。
+
+「人間はつねに、自分に理解できない事柄はなんでも否定したがるものである。」 パスカル
