--- a/study/politics/秩序.md
+++ b/study/politics/秩序.md
@@ -20,3 +20,5 @@
 他人が害されているのを見逃すと、自分もいずれ害される可能性がある。早めに押さえておくのが吉。
 
 systemとcosmos、秩序と混沌。
+
+ルールや秩序を重視するあまり、ルールの境界線上にある本当に判断が難しい問題から目を背けてはならない。ルールは楽をするためにあるが、ルールの運用は楽ではない。
