--- a/shared/family/marriage/結婚する前に話しておくこと.md
+++ b/shared/family/marriage/結婚する前に話しておくこと.md
@@ -3,3 +3,9 @@
 - お互いの小遣いをどうするか
 - 生活費をどうするか
 - 借金があるか
+- 出産のこと
+  - 流産しそうになったらどうするか
+  - 子供に障害が残りそうならどうするか
+    - 何%から考えるか
+
+出産については夫婦でよく話し合っておくべき。余裕のあるうちに。流産しそうになったら母体優先にするのか、無理してでも子供を生かすのか。障害を持つ可能性が高い場合に無理して生かすのか、出産の結果に任せるのか。
