--- a/shared/voice/training/tips/声を育てる.md
+++ b/shared/voice/training/tips/声を育てる.md
@@ -1,4 +1,28 @@
-声を育てるということは、喉を開く首の筋肉、息を強く細くする横隔膜、それらを補助する腹や背中の筋肉、などを鍛えるということ。
+## 目的
+
+どれだけ上手く演奏できても楽器がリコーダーならチープで軽い音しか出ない。まずは自分という楽器をグランドピアノやパイプオルガンのように大きく育てるのが先。もちろんそれと並行して上手い演奏を練習するのはいいけど、優先順位は決める。
+
+声をよくするのは野球で言えば球速160キロを目指すようなもの。
+自分の限界を超えた球を投げ続けることで成長するが、限界を越えればコントロールするのは難しくなる。成長の過程で楽な方に流れてはいけない。まずは制御できなくても限界を超えて、慣れてきたら制御する。小さく収まらない。
+
+歌よりも声を育てるのは、周りがリコーダーで難しい曲を弾こうとしている中で一人だけサックスやグランドピアノを使おうとしているようなもの。もちろんリコーダーにもリコーダーの良さがあるけど、自分のパフォーマンスの限界がリコーダーかどうかは鍛えてみないとわからない。
+
+## 方法
+
+声を育てるということは、喉を開く首の筋肉、息を強く細くする横隔膜、それらを補助する腹や背中の筋肉、などを鍛えるということ。自分という楽器を大きくする。
+
+特に筋トレしないといけないのは、横隔膜、内腹筋、喉を下げる首と胸の筋肉、舌の筋肉、あたり。
+
+## 結果
+
+楽器のスケールが大きくなるほど、音は低く重くなりやすい。
+体の大きさ、声帯の長さ、テンションの強さ、などがスケールに影響する。
+
+逆にいうと、高く軽い声を出すには声色を変えたりする工夫が必要。
+
+## その他
+
+音域を広げるのは、自分という楽器が元々カスタネットレベルならリコーダーレベルまで育てる意味はある。ただ、リコーダーレベルになったら次は音域よりも楽器そのものをより高価で大きなものにするべき。
 
 特に、喉を開いて、息が十分に強くなった声が自分の最大値。
 声を育てる前は誰でも声が軽い。その時点で自分に合った曲は決められない。
@@ -13,16 +37,7 @@
 
 息を強く細く吐くのは難しい。
 
-特に筋トレしないといけないのは、横隔膜、内腹筋、喉を下げる首と胸の筋肉、舌の筋肉、あたり。
-
 最近の歌手は上手いけど楽器としては二級品のまま歌ってる感じ。最高級の楽器になってない。
-
-楽器のスケールが大きくなるほど、音は低くなりやすい。
-体の大きさ、声帯の長さ、テンションの強さ、などがスケールに影響する。
-
-声をよくするのは野球で言えば球速160キロを目指すようなもの。
-自分の限界を超えた球を投げ続けることで成長するが、限界を越えればコントロールするのは難しくなる。成長の過程で楽な方に流れてはいけない。まずは制御できなくても限界を超えて、慣れてきたら制御する。小さく収まらない。
-
-歌よりも声を育てるのは、周りがリコーダーで難しい曲を弾こうとしている中で一人だけサックスやグランドピアノを使おうとしているようなもの。もちろんリコーダーにもリコーダーの良さがあるけど、自分のパフォーマンスの限界がリコーダーかどうかは鍛えてみないとわからない。
+昭和は平凡な曲に天才の声だったけど、令和は平凡な声に天才の曲という印象。
 
 自分という楽器がリコーダーだったらまだいいけど、カスタネットやトライアングルだったらまず楽器を替えないとできることが少なすぎる。
