--- a/games/Street-Fighter/Six/characters/キャラ対策の基本.md
+++ b/games/Street-Fighter/Six/characters/キャラ対策の基本.md
@@ -4,12 +4,17 @@
 
 ## 各キャラについて知っておくべきこと
 
-1. ガードしても割り込めない技（有利を取られる、切り返しが届かない、など）
+1. ガードして割り込める技、割り込めない技（有利を取られる、切り返しが届かない、など）
 2. 確反
 3. 投げとシミーの択がある攻め
 
 ガードしても割り込めない技以外は割り込めるので、ガードから切り返すのに重要。
 できれば確反も覚えておくといいけど、最悪パニカンじゃなくても割り込めたらいい。
+
+ラッシュしてもマイナスになる技、特によく使われる中段や下段は覚えておいた方がいい。
+たとえば舞のラッシュ中段は-1だし、エレナのラッシュ中足は0なので暴れられなくもない。
+
+ガードして有利になる技を判断できると、わざわざリスクのあるジャンプや無敵技で暴れなくていい。
 
 ## 要注意キャラ
 
