--- a/shared/collaboration/協力.md
+++ b/shared/collaboration/協力.md
@@ -29,3 +29,5 @@ collaborationはengagementと関わる部分が大きい。
 個にしかできない、やりにくいこともある。群れを統率するのは難しい。
 
 関係ない仕事を押し付けられそうになったら「そこに置いといてください」と返して無視すればいい。
+
+協力していても、個の利益や成長も追わないと置いていかれる。
