--- a/games/Street-Fighter/Six/theory/守りの基本.md
+++ b/games/Street-Fighter/Six/theory/守りの基本.md
@@ -14,6 +14,8 @@
 
 スト6は真面目に丁寧にやればやるほどインパクトに壊されるゲームなので、しっかりリスクを取って相手の攻めを切りに行く。
 
+-3とか、離れて-7とかの時に一番リターンのある技を返すばかりではなく、あえて手を出さないとか、少し待ってから小技で控えめに暴れるとかで相手の無敵技を待ってもいい。逆に無敵技読みでもっとリターンの高い切り返しを狙うのもいい。有利なのでなんでもできる。相手は無敵技暴れくらいしかできない。
+
 ## 割り切って投げを受け入れる
 
 投げ抜けはしない。
