--- a/shared/music/曲のキー.md
+++ b/shared/music/曲のキー.md
@@ -3,3 +3,8 @@
 音程は守った方がいいけど、キーは変えてもいい。
 ただ、キーを変える場合でも曲のテーマと一致させないといけない。
 特に歌では、キーを変えたことで歌詞の雰囲気と合わなくなることがある。
+
+原キーにこだわらなくていい。
+キーが合っていることよりも、表現が合っていることが大事。
+高く強い声はテンションの高い吠え声や叫び声、怒り、強い喜び、緊張、などを表す。
+高く弱い声は苦しみや悲しみなど。
