--- a/shared/voice/training/tips/息を抑える.md
+++ b/shared/voice/training/tips/息を抑える.md
@@ -14,3 +14,10 @@ tやsの空気音がうるさすぎる場合、息を吐きすぎている。横
 声を出す時は息を止める。
 
 息を吸って、胸のあたりで息を止める。このとき動いたあたりが声帯。常にここで声を出す。
+
+息を強くしても漏れてしまうとふぬけた声になる。
+
+息が強いほど漏れやすい。
+
+声帯を閉じるためには、まず息を強く細くする。
+声帯で無理やり抑えてはいけない。横隔膜で抑える。
