--- a/study/economics/貧富の格差.md
+++ b/study/economics/貧富の格差.md
@@ -21,3 +21,6 @@
 能動的に政府が手を出してもろくなことにならない。
 
 民を豊かにするには、格差を是正する必要がある。
+
+貧富の格差はあらかじめ富裕層ができないようにするべきで、既存の富裕層を法律で切り崩すのは無理。
+既存の富裕層を切り崩すには貧困層の暴力しかない。上からではなく下から。上からやりたいなら法律ではなく貧困層への武力供給の形しかない。
