--- a/shared/music/vocal/training/tips/ミックスボイスは気にしない.md
+++ b/shared/music/vocal/training/tips/ミックスボイスは気にしない.md
@@ -3,9 +3,9 @@
 
 裏声と地声を滑らかに行き来できると高低音が混ざった音程を出せる。
 
-ミックスボイスというのは単に地声と裏声の境界を薄くして、スムーズに移行すること。
-
 ミックスボイスというのは、息が漏れてるけどできるだけ地声っぽく聞こえる硬い地声とか鼻声。
 ミックスボイスとか裏声とか考える暇があったら全部地声で高音も低音も小声も大声も出せるようにした方がいい。
 
 いわゆるミックスボイスは声帯を硬くして無理やり高い声を出しているだけなので、練習しない方がいい。まずは地声で声帯をしっかり伸ばして柔らかくて高い声を出せるようにする。
+
+いわゆるミックスボイスは地声や裏声の声色を変えただけとか、息漏れの量を変えるとか、定義がぶれていて意味がない。
