--- a/shared/wealth/福祉.md
+++ b/shared/wealth/福祉.md
@@ -24,3 +24,7 @@ Wealth は福利や福祉の意味がある。
 国や行政などの福祉は保険のようなもの。
 まずは福祉がなくても生きられるようにするのが第一で、それから福祉で支える。
 福祉に依存させるような政策を摂るべきではない。
+
+社交とかビジネスは結局福祉を得るためにある。外部から利益を得ること、特に相手から望んで与えてもらうこと。
+
+奪うのではなく、相手が望んで自分を生かすようにしないと長続きしない。
