--- a/study/philosophy/本質.md
+++ b/study/philosophy/本質.md
@@ -4,4 +4,4 @@
 「本質的」と「付随的」
 「内在性」と「外在性」
 
-「本質は変わらない」のではなく、変わらないものを本質と呼ぶのだ。
+「本質は変わらない」のではなく、変わらない、あるいは変えられないものを本質と呼ぶのだ。変えてしまうと別物になってしまうところ。アイデンティティの問題。
