--- a/shared/music/曲のキー.md
+++ b/shared/music/曲のキー.md
@@ -6,5 +6,8 @@
 
 原キーにこだわらなくていい。
 キーが合っていることよりも、表現が合っていることが大事。
-高く強い声はテンションの高い吠え声や叫び声、怒り、強い喜び、緊張、などを表す。
+高く強い声はテンションの高い吠え声や叫び声、怒り、強い喜び、緊張、駆け抜ける感じ、などを表す。
 高く弱い声は苦しみや悲しみなど。
+
+歌の場合は地声の最高音がテンションの最高潮に当たるので、基本的には地声の最高音にその曲の最高音が一致するようにキーを変える。
+裏声はあんま重要じゃなくて、単に綺麗な声で出したいところっていうだけ。
