--- a/games/Street-Fighter/Six/characters/Elena/エレナのコンボ.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナのコンボ.md
@@ -204,6 +204,10 @@ ODグライドは安定する。
 持続当てからのコンボ。
 
 - {端} MK(+1), MK-HK, 弱ホーン, 強昇竜: 2790
+- MK(+1), MK-HK, CR HP-HP, DR 2MP, 中スピン-Sハーベスト, 中ホーン: 3185
+- MK(+1), MK-HK, SA1, 強昇竜: 2960
+- MK(+1), MK-HK, CR HP-HP, SA1, 強昇竜: 3050
+- MK(+1), MK-HK, CR HP-HP, DR 2MP, 中スピン-Sハーベスト, 中ホーン, SA3: 5185
 
 ## MK(+3)
 
@@ -358,8 +362,11 @@ MKは近くないと当たらない。
 - HP(pc)-HP, 強ホーン: 2800
 - {端} HP(pc)-HP, 弱ホーン, 強昇竜: 3480
 - HP(pc)-HP, DR 2MP, 中スピン-Sハーベスト, 中ホーン: 3689
-- {端} HP(pc)-HP, DR 2HP, 中スピン-Sハーベスト, 弱ホーン, 強昇竜: 4133
-- {端} HP(pc)-HP, DR 2HP, 中スピン-Sハーベスト, 弱昇竜, 弱昇竜: 4081 +36
+- {端} HP(pc)-HP, DR 2HP, 中スピン-Sハーベスト, 弱昇竜, 中昇竜: 4149 25F
+- {端} HP(pc)-HP, DR 2HP, 中スピン-Sハーベスト, 弱昇竜, 弱昇竜: 4081 36F
+- {端} HP(pc)-HP, DR 2MP, 中スピン-Sハーベスト, 弱昇竜, 弱昇竜: 3945 36F
+- {端} HP(pc)-HP, DR 2MP, 中スピン-Sハーベスト, 弱ホーン, 弱昇竜: 3897 36F
+- {端} HP(pc)-HP, DR 2HP, 中スピン-Sハーベスト, 弱昇竜, OD昇竜: 4285 25F
 - HP(pc)-HP, SA1, 強昇竜: 3720
 - HP(pc)-HP, DR 2MP, 中スピン-Sハーベスト, SA1, 強昇竜: 4035
 - HP(pc)-HP, DR 2MP, 中スピン-Sハーベスト, SA1, 弱ホーン: 3984
@@ -382,7 +389,19 @@ MKは近くないと当たらない。
 
 - 6HP-HP-HP: 2000
 
-## HK(pc)
+## HK(+2)
+
+- HK(+2), 2LP, 強昇竜: 2320
+- HK(+2), 2LP, 弱スピン: 1920
+- {立} HK(+2), 2LP, ODホーン, 強昇竜: 3000
+- HK(+2), 2LP, SA1, 強昇竜: 3160
+- {立} HK(+2), 2LP, ODホーン, SA1, 強昇竜: 3480
+- HK(+2), 2LP, CR 2LP, 2HP, 強スピン, SA2: 3608
+- HK(+2), 2LP, 弱スピン, SA3: 4320
+- {立} HK(+2), 2LP, 中ホーン, SA3: 4080
+- HK(+2), 2LP, CR 2LP, 2HP, 強スピン, DR 2MP, 強ホーン, SA3: 5017
+
+## HK(pc) (C限定)
 
 - HK(pc), 強昇竜: 2480
 - HK(pc), 弱ホーン: 2180
@@ -500,6 +519,7 @@ MKは近くないと当たらない。
 ## DI(壁)
 
 - DI(壁), 2MP, 中スピン-Sハーベスト, 弱ホーン, 中昇竜: 3390
+- DI(壁), 2MP, 中スピン-Sハーベスト, 弱昇竜, 弱昇竜: 3380
 - DI(壁), HP-HP, DR 2HP, 中スピン-Sハーベスト, 弱ホーン, 強昇竜: 3489
 - DI(壁), 2MP, 中スピン-Sハーベスト, 弱ホーン, OD昇竜: 3510
 - DI(壁), 2MP, 中スピン-Sハーベスト, SA1, 強昇竜: 3480
