--- a/games/Street-Fighter/Six/characters/Elena/エレナの攻めの選択肢.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの攻めの選択肢.md
@@ -62,6 +62,9 @@ MKの持続当てはド密着が強い。
 
 - MK-HK, 強ホーン
 - {端} MK-HK, 弱グライド-6P
+- MK-HK(g)
+  - 弱グライド: 5F技と相打ち
+  - 強グライド: 4F技を差し返してMKが入る
 - MK(g)-HK, 弱グライド
 
 中央ではガードされた時しか弱グライドが届かない。
