--- a/games/Street-Fighter/Six/characters/Ryu/リュウの特徴.md
+++ b/games/Street-Fighter/Six/characters/Ryu/リュウの特徴.md
@@ -15,6 +15,31 @@
 - 起き攻めの状況が悪くなりがち
 - 全体的に技が短い
 
+## 技の長さ
+
+- LP: 12
+- LK: 15
+- MP: 12
+- HP: 17.5
+- 2MP: 13強
+- 2MK: 17
+- 2HP: 13.5
+- 2HK: 20
+- 4HK: 17
+- 6MP: 19
+- 6HP: 20.5
+- 6HP, 2MP: 19.5
+- 強撃: 22.5
+- 中足刀: 23.5
+
+## 練気
+
+- 強波動が速くなる
+- 強波動が２ヒットになる
+- 強波掌の発生が早くなる（中攻撃から繋がる）
+- OD波掌がヒット時膝崩れになり、地上で技が繋がる
+- SA1が速くなる
+
 ## モダン操作
 
 モダンにない技:
