--- a/games/Street-Fighter/Six/characters/Ryu/リュウのコンボ.md
+++ b/games/Street-Fighter/Six/characters/Ryu/リュウのコンボ.md
@@ -9,6 +9,17 @@
 - LP(c), LK, 弱足刀: 1370
 - LP(c), LK, 弱足刀, SA3: 3370
 
+## 2LP
+
+- 2LP 3回, 強昇竜: 1590
+- 2LP 3回, 弱竜巻: 1290
+- {端} 2LP 3回, OD竜巻, 強昇竜
+- 2LP 3回, SA1: 1950
+
+## 2LK
+
+- 2LK, 2LP 2回, 強昇竜: 1490
+
 ## MP
 
 - MP, 2MP, 強昇竜: 2320/2096
@@ -19,6 +30,10 @@
 - MP, 2MP, 強昇竜, SA3: 4720/4096
 - MP, 2MP, cDR HP, MP, 強昇竜, SA3: 4812/4658
 - MP, 2MP, cDR HP, 強波掌, DR HP, 強昇竜, SA3: 5212/5100
+
+## MP, 2HP (C限定)
+
+- MP, 2HP, 強昇竜: 2520
 
 ## (気) MP
 
