--- a/games/Street-Fighter/Six/characters/Ryu/リュウの攻めの状況.md
+++ b/games/Street-Fighter/Six/characters/Ryu/リュウの攻めの状況.md
@@ -39,13 +39,27 @@
 
 ## 弱昇竜: 38
 
+- ステップ, 弱波掌(+5): ヒットで+7、ガードで+2の投げ間合い
+
 ## 中昇竜: 34
 
-## 強/OD昇竜: 29
+## 強昇竜: 37
+
+- ステップ, 前進(15F), 投げ
+- ステップ, 前進, ガード: シミー
+
+DR MP, HPとかから遠めキャンセルだとステップで密着できないことがある。
+
+## OD昇竜: 29
 
 ## 強波掌, DR HP, 強昇竜: 31
 
 - (端) ステップ, HP(+3): ヒットしたら2MPが入る、ガードされて+1になる
+
+## OD波掌: 3
+
+- 投げ
+- 後退: シミー
 
 ## 弱竜巻: 35
 
