--- a/games/Street-Fighter/Six/characters/Ryu/リュウのコンボ.md
+++ b/games/Street-Fighter/Six/characters/Ryu/リュウのコンボ.md
@@ -151,3 +151,7 @@
 - 強波掌, DR HP, 強昇竜: 2432/2236
 - 強波掌, DR HP, 強昇竜, SA3: 4472/4236
 - (端) 強波掌, 4HK, 強昇竜, SA3: 4720/4096
+
+## その他
+
+https://note.com/nikotarosun/n/n11a2e2311fbd
