--- a/games/Street-Fighter/Six/theory/守りの選択肢.md
+++ b/games/Street-Fighter/Six/theory/守りの選択肢.md
@@ -70,7 +70,7 @@
 
 詐欺飛びをジャスパしても+4以上にならないので、端なら前跳びで逃げて、それ以外は読み合い。
 
-## ファジー打撃
+## 遅らせ小パン（ファジー小パン）
 
 ガードして切り返しの亜種。
 起き上がりから1-2F遅らせて、切り返しをはじめから入れ込む。
@@ -78,10 +78,9 @@
 最速打撃をガードしつつ、遅らせ行動に割り込む。
 
 - 最速打撃をガードする（詐欺跳びを含む）
-- 2-4F遅らせ打撃に当たる
 - 5F以上遅らせ行動を止める（シミーを含む）
 - 投げられる
-- 五分近くの垂直跳びに対空が間に合う
+- 対空が間に合う
 
 詐欺跳びは原理上最速か5F以上遅らせ行動しかできないので、ファジー小パンに勝てない。
 ただし、詐欺跳びと見せかけて早く着地するテクニックもある。
@@ -89,6 +88,18 @@
 割り込みからコンボを狙える場合もある。
 
 発生が遅くてもキャンセルからコンボに繋がる技でリターンを狙うこともできる。
+
+遅らせコパンはシミーを止めて、打撃をガードできる。
+
+## 遅らせ中足
+
+- 最速打撃をガードする（詐欺飛びを含む）
+- 後退に当たる（逆択）
+- 10F以上遅らせ行動を止める（シミーを含む）
+- 投げられる
+- 垂直飛びに対空が間に合う場合がある
+
+普通はラッシュなどを仕込んでリターンを狙う。
 
 ## ファジージャンプ
 
