--- a/shared/engagement/tips/先輩と後輩.md
+++ b/shared/engagement/tips/先輩と後輩.md
@@ -2,3 +2,5 @@
 
 従来の日本の組織では、先輩後輩の関係がボトムアップのエンゲージメントを形成することを期待していた。
 ただ、十分に先輩を育てないとそもそも形成できない。一度文化を捨ててしまったらもう取り戻せない。
+
+若い子は能力が高いので、先輩も能力を見せつけないと信頼されない。バカだと思われたらダメ。
