--- a/shared/hope/絶望.md
+++ b/shared/hope/絶望.md
@@ -1,5 +1,13 @@
 # 絶望
 
+楽しみのない人生は絶望的だ。
+
+絶望、失望。
+
+希望を失うこと、持てないこと。
+
+「もう次の機会がない」と考えること。
+
 キュルケゴールは絶望を「死に至る病」と喩えた。
 ちなみに信仰、無私を病の対処法としている。
 
@@ -8,3 +16,5 @@
 絶望に負けないために、絶望をよく知る。
 
 将来に希望を持つ人が減るのは優れたリーダーがいない兆し。
+
+望みを持つことが希望につながる。
