--- a/shared/voice/training/tips/強い声を出す.md
+++ b/shared/voice/training/tips/強い声を出す.md
@@ -23,3 +23,5 @@ http://hira0888.life.coocan.jp/asu124.html
 横隔膜を下げることで息を強くして、腹筋をポンプのように使って細く吐く。喉は開いて声を止めずに響かせる。
 
 声が強いこと自体は別にいい。声を強くするために硬くなっていたら良くない。柔らかく強い声にする。
+
+スキマスイッチは声帯の張力低めで、息だけ強くして張るとそれっぽい。あと肺活量があるのでブレス足りなかったらどっかで切るしかない。
