--- a/shared/war/敵を作らない.md
+++ b/shared/war/敵を作らない.md
@@ -19,3 +19,7 @@
 
 人間関係では、攻撃された、と感じたら、反撃するよりも前に、そう感じたことを相手に伝えるといい。
 「不快だった」とか「馬鹿にしてる？」とか。
+
+人に嫌われるのはいいけど、恨まれるのはまずい。
+人に嫌われるということは、相手が離れていくということ。これはどうでもいい。よくある。
+しかし、人に恨まれるということは、相手が積極的にこちらを殺しにくる、害しにくるということ。
