--- a/games/Street-Fighter/Six/characters/Ryu/リュウの練習メニュー.md
+++ b/games/Street-Fighter/Six/characters/Ryu/リュウの練習メニュー.md
@@ -1,3 +1,12 @@
+## 対空
+
+（対空練習）
+
+- 2HP
+- 弱波動, {前方ジャンプ}, 強昇竜, CR 6MP
+
+自分が何もしてない時は
+
 ## 確反
 
 （確反練習）
@@ -20,4 +29,6 @@
 
 ## 柔道
 
-- 前投げ
+（反撃設定 > ダウンリバーサル: 4F技）
+
+- 前投げ, 前投げ, ...
