--- a/games/Street-Fighter/Six/theory/対空.md
+++ b/games/Street-Fighter/Six/theory/対空.md
@@ -27,3 +27,6 @@
 
 対空が弱いキャラは常にジャンプを見てないと間に合わない。
 マリーザ、溜めのないガイル、ディージェイ、など。
+
+自分が何も技を振ってない時は、無敵がないけど入力しやすい対空でもいい。
+たとえばリュウなら、普段は2HPで対空して、自分が技を振った時、特に波動拳を出した時だけは上を見て昇竜拳を入力できるようにする。
