--- a/games/Street-Fighter/Six/characters/Ryu/リュウのコンボ.md
+++ b/games/Street-Fighter/Six/characters/Ryu/リュウのコンボ.md
@@ -34,6 +34,7 @@
 ## MP, 2HP (C限定)
 
 - MP, 2HP, 強昇竜: 2520
+- {端} MP, 2HP, 強足刀, 中昇竜: 3280 32F
 
 ## (気) MP
 
@@ -46,32 +47,15 @@
 - MP(pc), 2HP, 強昇竜: 2640
 - (端) MP(pc), 2HP, OD竜巻, 強昇竜: 3300
 
-## (気) HP, OD波掌
-
-- (気) HP, OD波掌, HP, 強昇竜: 3220/3024
-- (気) HP, OD波掌, HP, 強昇竜, SA3: 5220/5024
-
-## HP(pc)
-
-- HP(pc), 強波掌, DR HP, 強昇竜: 3056
-- HP(pc), 強波掌, DR HP, 強昇竜, SA3: 5056
-
-## HP, cDR HP
-
-ガードされても連続ガードになる。
-
-- HP, cDR HP, 強波掌, 中足刀: /2588
-- HP, cDR HP, MP, 強昇竜: 2714/2546
-- (端) HP, cDR HP, 強波掌, 4HK, 強昇竜: 2974/2820
-- HP, cDR HP, 強波掌, DR HP, 強昇竜: 3210/3056
-- HP, cDR HP, 2MP, OD波掌, SA2: 3637
-- HP, cDR HP, 強波掌, DR HP, 強昇竜, SA3: 5210/5056
-
 ## 2MP
 
 - 2MP, 中波掌: 1400
 - 2MP, LK, 弱足刀: 1780
 - 2MP, LP, 強昇竜: 2020/1796
+
+## 6MP(+1)
+
+- 6MP(+1), 2LP, 弱竜巻: 1320
 
 ## 2MK, cDR LP
 
@@ -103,11 +87,27 @@
 - 2MK, cDR HP, MP, 強昇竜, SA3: 4112/3958
 - 2MK, cDR HP, 強波掌, DR HP, 強昇竜, SA3: 4512/4400
 
-## 4HK
+## (気) HP, OD波掌
 
-対空でも使える。
+- (気) HP, OD波掌, HP, 強昇竜: 3220/3024
+- (気) HP, OD波掌, HP, 強昇竜, SA3: 5220/5024
 
-- 4HK, 強昇竜, SA3: 5000/4160
+## HP(pc)
+
+- {端} HP(pc), 強足刀, 中昇竜: 3220 (C限定)
+- HP(pc), 強波掌, DR HP, 強昇竜: 3056
+- HP(pc), 強波掌, DR HP, 強昇竜, SA3: 5056
+
+## HP, cDR HP
+
+ガードされても連続ガードになる。
+
+- HP, cDR HP, 強波掌, 中足刀: /2588
+- HP, cDR HP, MP, 強昇竜: 2714/2546
+- (端) HP, cDR HP, 強波掌, 4HK, 強昇竜: 2974/2820
+- HP, cDR HP, 強波掌, DR HP, 強昇竜: 3210/3056
+- HP, cDR HP, 2MP, OD波掌, SA2: 3637
+- HP, cDR HP, 強波掌, DR HP, 強昇竜, SA3: 5210/5056
 
 ## 6HP
 
@@ -119,6 +119,17 @@
 ## 6HP 遠め
 
 - 6HP, LK, 弱足刀: 1980
+
+## HK(pc) (C限定)
+
+- HK(pc), HP, 強昇竜
+- {端} HK(pc), 4HP, 強足刀, 中昇竜: 3760
+
+## 4HK
+
+対空でも使える。
+
+- 4HK, 強昇竜, SA3: 5000/4160
 
 ## 6HK
 
