--- a/games/Street-Fighter/Six/characters/Ryu/リュウの特徴.md
+++ b/games/Street-Fighter/Six/characters/Ryu/リュウの特徴.md
@@ -17,20 +17,22 @@
 
 ## 技の長さ
 
-- LP: 12
-- LK: 15
-- MP: 12
-- HP: 17.5
-- 2MP: 13強
-- 2MK: 17
-- 2HP: 13.5
-- 2HK: 20
-- 4HK: 17
-- 6MP: 19
-- 6HP: 20.5
-- 6HP, 2MP: 19.5
-- 強撃: 22.5
-- 中足刀: 23.5
+- 4HP
+- 2LP
+- LP = MP
+- 2LK
+- 2MP = 2HP(1)
+- 2HP(2)
+- LK
+- 2MK
+- 4HK
+- HP
+- 6MP
+- 6HP, 2MP
+- 2HK
+- 6HP
+- 強撃
+- 中足刀
 
 ## 練気
 
