--- a/games/Street-Fighter/Six/characters/Ryu/リュウのコンボ.md
+++ b/games/Street-Fighter/Six/characters/Ryu/リュウのコンボ.md
@@ -120,6 +120,13 @@
 
 - 6HP, LK, 弱足刀: 1980
 
+## 6HP(+2)
+
+- {端} 6HP(+2), 4HP, 強足刀, 中昇竜: 3480 (C限定)
+- {端} 6HP(+2), 4HP, 強足刀, 中昇竜, SA3: 5480 (C限定)
+
+端は強足刀が入るのでカウンター確認したいところ。
+
 ## HK(pc) (C限定)
 
 - HK(pc), HP, 強昇竜
@@ -143,12 +150,23 @@
 ## DI(pc)
 
 - DI(pc), 6HP, 2MP, 強昇竜: 2860
+- {端} DI(pc), 4HP, 強足刀, 中昇竜: 3230 (C限定)
+- DI(pc), 6HP, 2MP, OD波掌, SA2: 3800
 - DI(pc), 6HP, 2MP, cDR MP, HP, cDR MP, HP, 強昇竜, SA3: 5248
 
 ## DI(壁)
 
 - DI(壁), HP, 中波掌, 強昇竜: 2840/2672
 - DI(壁), HP, 中波掌, 強昇竜, SA3: 4840/4672
+
+## 弱波掌(c)
+
+- 弱波掌(c), 中足刀: 2040 (C限定)
+- 弱波掌(c), DR 2MP, 強昇竜: 2302
+- 弱波掌(c), DR 2MP, 中竜巻: 2030
+- 弱波掌(c), SA1: 2840
+- 弱波掌(c), SA1(電刃): 3240
+- 弱波掌(c), DR 2MP, 強昇竜, SA3: 4342
 
 ## 中波掌(c)
 
