--- a/games/Street-Fighter/Six/characters/Ryu/リュウの特徴.md
+++ b/games/Street-Fighter/Six/characters/Ryu/リュウの特徴.md
@@ -18,21 +18,28 @@
 ## 技の長さ
 
 - 4HP
+- 4HK(1)
 - 2LP
 - LP = MP
 - 2LK
 - 2MP = 2HP(1)
 - 2HP(2)
 - LK
+- 弱波掌
 - 2MK
-- 4HK
-- HP
+- 4HK(2)
+- MK = HP
 - 6MP
 - 6HP, 2MP
 - 2HK
 - 6HP
-- 強撃
-- 中足刀
+- 6HK
+- DR 2LK, 2MP
+- 強波掌
+- DR MP = 中足刀
+- DR 2MP
+- 強竜巻
+- 強足刀
 
 ## 練気
 
@@ -51,6 +58,15 @@
 
 必殺技ボタンの強昇竜が使いやすいのでモダン適性は高い。
 単純に波動昇竜だけでも結構勝てる。
+
+## モダンにない技
+
+- 2LP
+- MK
+- HK
+- 4HP
+- 弱/強竜巻
+- 弱/強足刀
 
 ## その他
 
