--- a/games/Street-Fighter/Six/characters/Ryu/リュウの練習メニュー.md
+++ b/games/Street-Fighter/Six/characters/Ryu/リュウの練習メニュー.md
@@ -3,32 +3,38 @@
 （対空練習）
 
 - 2HP
-- 弱波動, {前方ジャンプ}, 強昇竜, CR 6MP
+- 弱波動, {前方ジャンプ}, 強昇竜, DR 投げ
 
-自分が何もしてない時は
+自分が何もしてなかったら2HP、中足や波動を出していたら昇竜で対空する。
 
-## 確反
+## 確反 (C限定)
 
 （確反練習）
 
-- HP(pc), 強波掌, DR HP, 強昇竜, SA3
+- HK(pc), HP, 強昇竜, SA3
+
+## DI(pc)
 
 （ドライブインパクトへの対応練習）
 
 - DI(pc), 6HP, 2MP, 強昇竜, SA3
 
-## 対空
+## DI(壁)
 
-（対空練習）
+## 飛び道具
 
-- 強昇竜
+- 前進, 弱波動
+- 前進, 2MK, 弱波動
 
-## ジャンプ攻撃からのコンボ
-
-- J.HP, HP, cDR HP, 強波掌, 中足刀
+波動の前に斜め後ろをしっかり入れるのが大事。
 
 ## 柔道
 
 （反撃設定 > ダウンリバーサル: 4F技）
 
 - 前投げ, 前投げ, ...
+- 前投げ, {垂直ジャンプ}, 強昇竜, ...
+
+## ジャンプ攻撃からのコンボ
+
+- J.HP, HP, cDR HP, 強波掌, 中足刀
